deploy/base/identity-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
spec:
  replicas: 1
  progressDeadlineSeconds: 120
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app: identity
  template:
    spec:
      restartPolicy: Always
      containers:
        - name: identity
          imagePullPolicy: Always
          image: docker-registry.public.dvbern.ch/kibon/stip/identity:latest
          args:
            - 'start'
            - '--optimized'
            - '--import-realm'
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            failureThreshold: 6
            httpGet:
              scheme: HTTP
              path: /health/live
              port: http
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 6
            httpGet:
              scheme: HTTP
              path: /health/ready
              port: http
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 1
      imagePullSecrets:
        - name: dvbern-public-registry
