deploy/base/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: api
  type: ClusterIP
