deploy/base/identity-service.yml
apiVersion: v1
kind: Service
metadata:
  name: identity
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: identity
  type: ClusterIP
