deploy/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www
  annotations:
    route.openshift.io/termination: "edge"
spec:
  rules:
    - host: "<overlay-specific>"
      http:
        paths:
          - path: "/api/v1"
            backend:
              service:
                name: gesuch-app
                port:
                  name: http
            pathType: Prefix
  tls:
    - {}
